[tool.poetry]
name = "goit-python-web-06-hw"
version = "0.1.0"
description = ""
authors = ["Andrii-Mashkov <134103866+Andrii-Mashkov@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.9"
faker = "^19.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
